src/scss/themes/fylr/components/_toolbar.scss
// Toolbar
.cui-toolbar {
	display: flex;
	min-height: $toolbar-height;
	justify-content: space-between;
	align-items: center;
	background: $toolbar-background;
	padding: $toolbar-padding;
	// needed in listview, to align all: content-box for all!
	// box-sizing: content-box; // todo
	overflow: visible !important;

	@include toolbar-gap();

	// reset if toolbar within another toolbar
	.cui-toolbar {
		padding: 0;
		min-height: 0;
	}

	&.cui-template-empty {
		display: none;
	}

	> .cui-horizontal-layout-left,
	> .cui-horizontal-layout-right {
		flex-direction: row;
		min-width: 0;
		overflow: visible !important;
	}

	> .cui-horizontal-layout-center {
		justify-content: center;
		flex-direction: row;
		overflow: visible !important;
	}

	// todo: find an example in fylr, what is this special case for, do we still need it?
	// see: .ez5-quicksearch-input | .cui-navigation-toolbar
	> div > .cui-maximize-horizontal {
		// in column direction this is solved by
		// align-items: stretch, but here
		// we need to overwrite this
		flex: 1 1 auto;
		align-self: stretch;
		overflow: visible;

		> .cui-horizontal-layout-left,
		> .cui-horizontal-layout-center,
		> .cui-horizontal-layout-right {
			overflow: visible;
		}
	}

	// .cui-horizontal-layout-left {
	// }

	.cui-horizontal-layout-right {
		flex-shrink: 0;
	}

	// Toolbar Content

	// e.g. in search: .ez5-quicksearch-input | .ez5-navi-input
	.cui-data-field-input {
		display: flex;
		align-items: center;
		min-width: 0;

		&.cui-vertical-layout {
			align-items: stretch;
			justify-content: center;
		}

		.cui-input {
			flex-grow: 0;
		}
	}

	// Buttons should always shrink in a toolbar
	.cui-button-button,
	.cui-button-select,
	.cui-button-href,
	.cui-data-field {
		min-width: 0;
		flex-shrink: 1;
	}
}

.cui-result-navigation-toolbar {
	// left column has the status information label, it can truncate with ...
	> .cui-horizontal-layout-left {
		flex: 1 1 auto;
	}
	
	.cui-buttonbar .cui-buttonbar-group-navi {
		@include buttonbar-group-navigation();
	}

	.cui-buttonbar + .cui-label {
		margin-left: $spacer-sm;
	}
}

// Navigation Toolbar
// todo: find use-case, replace --mini
// use-case: editor
.cui-navigation-toolbar {
	.cui-buttonbar .cui-buttonbar-group {
		@include buttonbar-group-navigation();

		.cui-number-input {
			margin: 0 $spacer-xs;
		}
	}

	// &--mini {
	// 	background: none;
	// 	min-height: 20px !important;

	// 	.cui-horizontal-layout-left > .cui-label:first-child {
	// 		color: theme-color('dark'); // todo
	// 		font-weight: normal;
	// 		padding-left: $spacer-sm;
	// 		margin-right: 0;
	// 	}

	// 	.cui-buttonbar {
	// 		margin-bottom: 2px;
	// 	}

	// 	.cui-button {
	// 		padding: 0;
	// 	}

	// 	.cui-input {
	// 		padding: 0 3px;
	// 		font-size: 11px;
	// 		line-height: 18px;
	// 	}
	// }

	> .cui-horizontal-layout-left {
		> .cui-label:last-child {
			margin-right: $spacer;
		}
	}
}

